Finalizando CRUD de veiculo
