# src/main/java/br/com/locamais/sbootlocamaisrentcars/model/VeiculoModel.java
@@ -14,13 +14,17 @@ public class VeiculoModel implements Serializable {
 
     @Id
     @GeneratedValue(strategy = GenerationType.AUTO)
+    @Column(name = "id_veiculo")
     private UUID idVeiculo;
+    @Column(name = "nome_veiculo")
     private String nomeVeiculo;
+    @Column(name = "tipo_veiculo")
     private String tipoVeiculo;
     private Boolean alugado;
     private String status;
     private String marca;
     private String placa;
     private String chassi;
+    @Column(name = "valor_tabela")
     private Double valorTabela;
 }
